add slick slider at new page

--- a/prepros.config
+++ b/prepros.config
@@ -939,6 +939,12 @@
         }
       },
       {
+        "file": "#source/service.kit",
+        "config": {
+          "customOutput": "service.html"
+        }
+      },
+      {
         "file": "#source/style.scss",
         "config": {
           "customOutput": "css\\style.css"
